syntax = "proto3";

package stats.service.collector;

import "stats/messages/user.proto";
import "google/protobuf/empty.proto";

option java_package = "ru.practicum.grpc.stats";

service UserActionController {
  rpc CollectUserAction(stats.message.UserActionProto)
      returns (google.protobuf.Empty);
}